@@ -1,7 +1,6 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(panda.c)
 AC_CONFIG_AUX_DIR(config)
-AM_CONFIG_HEADER
 AC_REVISION
 AM_INIT_AUTOMAKE(panda, 0.4)
 AM_MAINTAINER_MODE
